# Collocation_method

./: .gitignore  Makefile  README.md  pyproject.toml
orbit/: __init__.py  matrix.py  orbits2D.py
test/: X_pregenerated.txt  input.txt  orbit_test.py  pytest_test.py
